data/diff_tests/wasmtime/block_IncorrectHandlingofControlFlowAcrossModuleBoundaries_139.wast.bin.wast
(assert_invalid
  (module binary
    "\00\61\73\6d\01\00\00\00\01\8a\80\80\80\00\02\60"
    "\01\7f\01\7f\60\00\01\7f\02\91\80\80\80\00\01\03"
    "\65\6e\76\09\73\6f\6d\65\5f\66\75\6e\63\00\00\03"
    "\82\80\80\80\00\01\01\0a\93\80\80\80\00\01\8d\80"
    "\80\80\00\00\02\7f\41\00\10\00\0c\00\41\01\0b\0b"
  )
""
)